# language_buddy

./: .gitignore  DOCUMENTATION.md  Dockerfile  README.md  config.yaml  example.env  language_learning.db  pyproject.toml
src/: api.py  app.py  prompts.py  utils.py
